Move file system handling into firmware

--- a/bl616/misterynano_fw/Makefile
+++ b/bl616/misterynano_fw/Makefile
@@ -4,8 +4,6 @@ BAUDRATE?=921600
 SDK_DEMO_PATH ?= .
 BL_SDK_BASE ?= $(SDK_DEMO_PATH)/../../..
 
-export BL_SDK_BASE
-
 CHIP ?= bl616
 BOARD ?= bl616dk
 CROSS_COMPILE ?= riscv64-unknown-elf-
@@ -18,3 +16,14 @@ splash.c: splash.png Makefile
 
 term:
 	term.sh $(COMX) $(BAUDRATE)
+
+FATFS_SRC=$(BL_SDK_BASE)/components/fs/fatfs
+SDL_TEST_CFLAGS=-I. -I$(FATFS_SRC) -Iu8g2/csrc `sdl2-config --cflags` -DSDL
+SDL_TEST_SRC=u8g2/csrc/*.c u8g2/sys/bitmap/common/*.c u8g2/sys/sdl/common/*.c
+FATFS_FILES=$(FATFS_SRC)/ff.c $(FATFS_SRC)/diskio.c $(FATFS_SRC)/ffunicode.c
+
+sdl_menu_test: sdl_menu_test.c menu.c menu.h fatfs_conf_user.h 
+	gcc $(SDL_TEST_CFLAGS) -o sdl_menu_test sdl_menu_test.c menu.c $(SDL_TEST_SRC) $(FATFS_FILES) `sdl2-config --libs`
+
+test: sdl_menu_test
+	./sdl_menu_test
