HID joystick support

--- a/impl/project_process_config.json
+++ b/impl/project_process_config.json
@@ -44,7 +44,7 @@
  ],
  "Incremental_Compile" : "",
  "Initialize_Primitives" : false,
- "JTAG" : false,
+ "JTAG" : true,
  "MODE_IO" : false,
  "MSPI" : true,
  "MSPI_JUMP" : false,
