Add/update SD card related testbenchs

--- a/sim/floppy_tb/Makefile
+++ b/sim/floppy_tb/Makefile
@@ -10,7 +10,7 @@ OBJ_DIR=obj_dir
 VERILATOR_DIR=/usr/local/share/verilator/include
 VERILATOR_FILES=verilated.cpp verilated_vcd_c.cpp verilated_threads.cpp
 
-HDL_FILES = floppy_tb.v sd_fake.v ../../src/misc/sd_card.v ../../src/misc/sdcmd_ctrl.v ../../src/misc/sd_reader.v ../../src/fdc1772/fdc1772.v ../../src/fdc1772/floppy.v
+HDL_FILES = floppy_tb.v ../../src/misc/sd_card.v ../../src/misc/sdcmd_ctrl.v ../../src/misc/sd_rw.v ../../src/fdc1772/fdc1772.v ../../src/fdc1772/floppy.v
 
 FATFS=../../../../firmware/bouffalo_sdk/components/fs/fatfs
 
