Expose printer port and fix #24

--- a/impl/pnr/device.cfg
+++ b/impl/pnr/device.cfg
@@ -1,4 +1,4 @@
-set JTAG regular_io = true
+set JTAG regular_io = false
 set SSPI regular_io = true
 set MSPI regular_io = true
 set READY regular_io = false
@@ -12,6 +12,7 @@ set security_bit_enable = true
 set bsram_init_fuse_print = true
 set background_programming = off
 set secure_mode = false
+set download_speed = 10000000
 set program_done_bypass = false
 set wake_up = 0
 set format = binary
