--- a/src/impl/atarist_lcd_process_config.json
+++ b/src/impl/atarist_lcd_process_config.json
@@ -44,7 +44,7 @@
  ],
  "Incremental_Compile" : "",
  "Initialize_Primitives" : false,
- "JTAG" : true,
+ "JTAG" : false,
  "MODE_IO" : false,
  "MSPI" : true,
  "MSPI_JUMP" : false,
@@ -58,7 +58,7 @@
  "Multiple_File_Compilation_Unit" : true,
  "Number_of_Critical_Paths" : "",
  "Number_of_Start/End_Points" : "",
- "OUTPUT_BASE_NAME" : "atarist",
+ "OUTPUT_BASE_NAME" : "atarist_lcd",
  "POWER_ON_RESET_MONITOR" : true,
  "PRINT_BSRAM_VALUE" : true,
  "PROGRAM_DONE_BYPASS" : false,
@@ -72,7 +72,7 @@
  "Push_Tristates" : true,
  "READY" : false,
  "RECONFIG_N" : false,
- "Ram_RW_Check" : true,
+ "Ram_RW_Check" : false,
  "Replicate_Resources" : false,
  "Report_Auto-Placed_Io_Information" : false,
  "Resolve_Mixed_Drivers" : false,
@@ -89,14 +89,14 @@
  "Synthesis On/Off Implemented as Translate On/Off" : false,
  "Synthesize_tool" : "GowinSyn",
  "TclPre" : "",
- "TopModule" : "top",
+ "TopModule" : "",
  "USERCODE" : "default",
  "Unused_Pin" : "As_input_tri_stated_with_pull_up",
  "Update_Compile_Point_Timing_Data" : false,
  "Use_Clock_Period_for_Unconstrainted IO" : false,
  "VCCAUX" : 3.3,
  "VCCX" : "3.3",
- "VHDL_Standard" : "VHDL_Std_2008",
+ "VHDL_Standard" : "VHDL_Std_1993",
  "Verilog_Standard" : "Vlg_Std_Sysv2017",
  "WAKE_UP" : "0",
  "Write_Vendor_Constraint_File" : true,
