tc60k bl616 support

--- a/src/impl/atarist_tc60k_process_config.json
+++ b/src/impl/atarist_tc60k_process_config.json
@@ -1,12 +1,12 @@
 {
  "BACKGROUND_PROGRAMMING" : "off",
- "COMPRESS" : false,
+ "COMPRESS" : true,
  "CPU" : true,
  "CRC_CHECK" : true,
  "Clock_Route_Order" : 0,
  "Convert_SDP32_36_to_SDP16_18" : true,
  "Correct_Hold_Violation" : true,
- "DONE" : false,
+ "DONE" : true,
  "DOWNLOAD_SPEED" : "default",
  "Disable_Insert_Pad" : false,
  "ENABLE_CTP" : false,
@@ -44,12 +44,12 @@
  "MSPI" : true,
  "MSPI_JUMP" : false,
  "MULTIBOOT_ADDRESS_WIDTH" : "24",
- "MULTIBOOT_MODE" : "Single",
+ "MULTIBOOT_MODE" : "Normal",
  "MULTIBOOT_SPI_FLASH_ADDRESS" : "000000",
  "MULTIJUMP_ADDRESS_WIDTH" : "24",
- "MULTIJUMP_MODE" : "Single",
+ "MULTIJUMP_MODE" : "",
  "MULTIJUMP_SPI_FLASH_ADDRESS" : "000000",
- "Multi_Boot" : true,
+ "Multi_Boot" : false,
  "OUTPUT_BASE_NAME" : "atarist",
  "POWER_ON_RESET_MONITOR" : true,
  "PRINT_BSRAM_VALUE" : true,
@@ -60,7 +60,7 @@
  "Place_Option" : "0",
  "Process_Configuration_Verion" : "1.0",
  "Promote_Physical_Constraint_Warning_to_Error" : true,
- "READY" : false,
+ "READY" : true,
  "RECONFIG_N" : false,
  "Ram_RW_Check" : true,
  "Replicate_Resources" : false,
