bl616 build fix

--- a/src/impl/atarist_tc60k_process_config.json
+++ b/src/impl/atarist_tc60k_process_config.json
@@ -47,10 +47,10 @@
  "MULTIBOOT_MODE" : "Normal",
  "MULTIBOOT_SPI_FLASH_ADDRESS" : "000000",
  "MULTIJUMP_ADDRESS_WIDTH" : "24",
- "MULTIJUMP_MODE" : "",
+ "MULTIJUMP_MODE" : "Normal",
  "MULTIJUMP_SPI_FLASH_ADDRESS" : "000000",
  "Multi_Boot" : false,
- "OUTPUT_BASE_NAME" : "atarist",
+ "OUTPUT_BASE_NAME" : "atarist_tc60k",
  "POWER_ON_RESET_MONITOR" : true,
  "PRINT_BSRAM_VALUE" : true,
  "PROGRAM_DONE_BYPASS" : false,
@@ -83,7 +83,7 @@
  "Unused_Pin" : "As_input_tri_stated_with_pull_up",
  "VCC" : "0.9",
  "VCCAUX" : 3.3,
- "VCCX" : "3.3",
+ "VCCX" : "1.8",
  "VHDL_Standard" : "VHDL_Std_2008",
  "Verilog_Standard" : "Vlg_Std_Sysv2017",
  "WAKE_UP" : "0",
